--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "react": "16.13.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
